<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:padding="14dp"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/img_sign_up_icon"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/login_screen_icon"
        android:src="@drawable/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_sign_up_id"
        style="@style/Default"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="2dp"
        android:autofillHints="username"
        android:background="@drawable/edittext_rounded_corner_rectangle"
        android:elevation="3dp"
        android:hint="@string/login_edittext_hint"
        android:inputType="text"
        android:paddingStart="10dp"
        android:drawablePadding="18dp"
        android:drawableLeft="@drawable/icm_user_resize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_sign_up_icon">

    </EditText>


    <TextView
        android:id="@+id/tv_sign_up_id_wrong"
        style="@style/SignUpTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingStart="8dp"
        android:text="@string/sign_up_id_wrong"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_up_id" />

    <EditText
        android:id="@+id/et_sign_up_password"
        style="@style/Default"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="2dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_rounded_corner_rectangle"
        android:elevation="3dp"
        android:hint="@string/login_edittext_password_hint"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/icm_pw_resize"
        android:paddingStart="18dp"
        android:drawablePadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_id_wrong" />

    <ImageView
        android:id="@+id/sign_up_visibility_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icm_secret_resize"
        android:clickable="true"
        android:translationZ="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_sign_up_password"
        app:layout_constraintEnd_toEndOf="@+id/et_sign_up_password"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/et_sign_up_password"
        app:layout_constraintTop_toTopOf="@+id/et_sign_up_password"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_sgin_up_password_wrong"
        style="@style/SignUpTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingStart="8dp"
        android:text="@string/password_rule"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_up_password" />

    <EditText
        android:id="@+id/et_sign_up_nick_name"
        style="@style/Default"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="2dp"
        android:autofillHints="name"
        android:background="@drawable/edittext_rounded_corner_rectangle"
        android:elevation="3dp"
        android:hint="@string/sign_up_nick_name_hint"
        android:inputType="text"
        android:paddingStart="10dp"
        android:drawablePadding="18dp"
        android:drawableLeft="@drawable/icm_name_resize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sgin_up_password_wrong" />

    <TextView
        android:id="@+id/tv_sign_up_nickname_wrong"
        style="@style/SignUpTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingStart="8dp"
        android:text="@string/sign_up_nick_name_wrong"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_up_nick_name" />

    <EditText
        android:id="@+id/et_sign_up_email"
        style="@style/Default"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="2dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_rounded_corner_rectangle"
        android:elevation="3dp"
        android:hint="@string/sign_up_email_hint"
        android:drawablePadding="12dp"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:drawableLeft="@drawable/icm_mail_resize"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_nickname_wrong" />

    <TextView
        android:id="@+id/tv_sign_up_email_wrong"
        style="@style/SignUpTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingStart="8dp"
        android:text="@string/wrong_email_address"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_up_email" />

    <EditText
        android:id="@+id/et_sign_up_intro"
        style="@style/Default"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="2dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_rounded_corner_rectangle"
        android:elevation="3dp"
        android:hint="@string/tv_intro_hint"
        android:inputType="text"
        android:paddingStart="10dp"
        android:drawablePadding="18dp"
        android:drawableLeft="@drawable/icm_intro_resize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_email_wrong" />

    <TextView
        android:id="@+id/tv_sign_up_intro_wrong"
        style="@style/SignUpTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingStart="8dp"
        android:text="@string/intro_wrong"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_up_intro" />


    <android.widget.Button
        android:id="@+id/btn_sign_up_complete"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_rounded_corner_rectangle"
        android:text="@string/sign_up_complete_button_text"
        app:layout_constraintBottom_toTopOf="@+id/ll_return_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_return_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:id="@+id/tv_return_text"
        style="@style/Sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/tv_return_text"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_return_click"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_return_click"
        style="@style/Sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:text="@string/tv_return_text_click"
        android:textColor="@color/point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_return_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>