<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_login_icon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/login_screen_icon"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_login_id"
        style="@style/Default"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:autofillHints="username"
        android:background="@drawable/edittext_rounded_corner_rectangle"
        android:drawableStart="@drawable/icm_user_resize"
        android:drawablePadding="20dp"
        android:elevation="3dp"
        android:hint="@string/login_edittext_hint"
        android:textColorHint="@color/icon"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_login_icon" />

    <TextView
        android:id="@+id/tv_login_id_wrong"
        style="@style/SignUpTest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:paddingStart="8dp"
        android:text="@string/login_id_not_found"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_id" />


    <EditText
        android:id="@+id/et_login_password"
        style="@style/Default"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_rounded_corner_rectangle"
        android:drawableStart="@drawable/icm_pw_resize"
        android:drawablePadding="30dp"
        android:elevation="3dp"
        android:hint="@string/login_edittext_password_hint"
        android:textColorHint="@color/icon"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_id_wrong" />


    <ImageView
        android:id="@+id/login_visibility_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icm_secret_resize"
        android:clickable="true"
        android:translationZ="5dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_login_password"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
        app:layout_constraintTop_toTopOf="@+id/et_login_password" />

    <TextView
        android:id="@+id/tv_login_password_wrong"
        style="@style/SignUpTest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingStart="8dp"
        android:text="@string/login_wrong_password"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_login_id_wrong"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <TextView
        android:id="@+id/tv_id_search"
        style="@style/Sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/id_password_search"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_password_wrong"
        tools:layout_editor_absoluteX="14dp" />

    <android.widget.Button
        android:id="@+id/btn_login"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/button_rounded_corner_rectangle"
        android:text="@string/login_button_text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id_search" />

    <android.widget.Button
        android:id="@+id/btn_sign_up"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_rounded_corner_rectangle"
        android:backgroundTint="@color/text"
        android:text="@string/sign_up_button_text"
        android:textColor="@color/point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>