<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_news"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginBottom="20dp"
    android:elevation="3dp"
    android:background="@drawable/corners_15dp_radius"
    android:clipToOutline="true"
    android:padding="8dp">

    <ImageView
        android:id="@+id/iv_news_image"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:src="@drawable/news"
        android:scaleType="fitXY"
        android:clipToOutline="true"
        android:background="@drawable/corners_10dp_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_news_image"
        android:gravity="right|center_vertical"
        android:background="@android:color/transparent"
        android:text="@string/date"/>

    <TextView
        android:id="@+id/tv_article_title"
        style="@style/ArticleTitle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/news"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_reporter" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_reporter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_news_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_news_image">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_retangle"
                android:gravity="start"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/profile_circle_shape"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_user" />

                <TextView
                    android:id="@+id/tv_writer_name"
                    style="@style/UserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:text="@string/reporter_name"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>